fix: Fix Canceling Gamification Action - MEED-2126 - Meeds-io/meeds#933 (#999)
Prior to this change, when canceling an action, an error
IndexOutOfBoundsException is triggered due to the fact that the returned
list doesn't have elements into it. This change will make sure to access
first element of the list only when results are returned.